# SampleTelegramBot

./: .gitignore  Dockerfile  LICENSE  README-FOR-CLIENT-EN.md  README-FOR-CLIENT-RU.md  README-FOR-DEVELOPER.md  README.md  docker-compose.yml  pyproject.toml
EDITTHIS/: __init__.py  __main__.py
EDITTHIS/src/app/bot/: __init__.py
EDITTHIS/src/app/bot/handlers/: reply.py
EDITTHIS/src/app/bot/modules/: __init__.py  middlewares.py
EDITTHIS/src/core/: __init__.py  application_config.py  json_answer.py  service_loader.py  task_manager.py  utils.py
EDITTHIS/src/core/logger/: logger_impl.py
EDITTHIS/src/database/models/: __init__.py  user.py
EDITTHIS/src/services/: __init__.py  base_service.py  bot_service.py  user_service.py
EDITTHIS/src/services/api/: __init__.py  base_api_provider.py
avitoworkerservice/: __main__.py
avitoworkerservice/src/core/: application_config.py  service_loader.py  task_manager.py
avitoworkerservice/src/core/logger/: __init__.py
avitoworkerservice/src/services/: __init__.py  base_service.py  temp_service.py
avitoworkerservice/src/services/api/: base_api_provider.py
data/: answers.json  config.ini
docs/: DependencyInjectionEXAMPLE.md  EXAMPLE.md  HOWTOUSE.md
sampletelegrambot/: __main__.py  main.py
sampletelegrambot/src/app/bot/: __init__.py  bot.py
sampletelegrambot/src/app/bot/handlers/: callback.py  reply.py
sampletelegrambot/src/app/bot/modules/: middlewares.py
sampletelegrambot/src/core/: __init__.py  application_config.py  config.py  json_answer.py  service_loader.py  tast_manager.py  utils.py
sampletelegrambot/src/core/logger/: __init__.py  logger_impl.py
sampletelegrambot/src/services/: __init__.py  base_service.py  bot_service.py  user_service.py
tests/: test_service_loader.py  test_user_service.py
