[tool.poetry]
name = "sampletelegrambot"
version = "0.5"
description = "A sample sructure for a telegram bot"
authors = ["Yooshyasha <mejzikrejzi66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tortoise-orm = {extras = ["asyncodbc"], version = "^0.22.1"}
loguru = "^0.7.2"


[tool.poetry.dev-dependencies]
pytest = "^8.3.3"


[tool.poetry.scripts]
main = "sampletelegrambot.__main__:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
